--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@
 @import 'show_card.css';
 @import 'index-card.css';
 @import 'nav-bar.css';
+@import 'about.css';
 
 html, body {
   margin: 0;
@@ -11,6 +12,6 @@ html, body {
   font-family: neue-haas-grotesk-text,sans-serif;
   font-weight: 400;
   font-style: normal;
-  height: 100%;
+  height: 100vh;
 }
 
